--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "clean": "rm -rf build && rm -rf test && rm -rf .tmp",
     "build": "run-s clean && npm run build:ts && npm run build:js && npm run build:copy-types",
     "build:ts": "tsc -p tsconfig.json",
-    "build:js": "webpack --config webpack.config.js -p && webpack --config webpack.min.config.js -p",
+    "build:js": "cp src/*.css .tmp && webpack --config webpack.config.js -p && webpack --config webpack.min.config.js -p",
     "build:copy-types": "cp .tmp/*.d.ts build",
     "prepare": "run-s prepare:*",
     "prepare:generate-barrels": "barrelsby --directory src --singleQuotes --delete",
@@ -97,6 +97,7 @@
     "barrelsby": "^1.0.2",
     "codecov": "^3.5.0",
     "coveralls": "^3.0.4",
+    "css-loader": "^3.2.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.3.1",
     "gh-pages": "^2.0.1",
@@ -105,6 +106,7 @@
     "jest": "^23.6.0",
     "jest-config": "^23.6.0",
     "jest-transform-stub": "^1.0.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "npm-run-all": "^4.1.5",
     "npm-scripts-info": "^0.3.9",
     "opn-cli": "^4.0.0",
@@ -115,6 +117,7 @@
     "snyk": "^1.185.5",
     "source-map-loader": "0.2.3",
     "standard-version": "^4.4.0",
+    "style-loader": "^1.0.0",
     "trash-cli": "^1.4.0",
     "ts-jest": "^23.10.5",
     "ts-node": "^7.0.1",
@@ -124,9 +127,10 @@
     "tslint-loader": "3.6.0",
     "typedoc": "^0.13.0",
     "typescript": "^3.5.2",
+    "typings-for-css-modules-loader": "^1.7.0",
     "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "4.12.0",
-    "webpack-cli": "^3.3.5",
+    "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.1.11"
   },
   "jest": {
