--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,7 +40,7 @@
     "types": ["node"],
     "typeRoots": ["node_modules/@types", "src/types"]
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.tsx", "src/**/*.ts"],
   "exclude": ["node_modules/**"],
   "compileOnSave": false
 }
