--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "build:ts": "tsc -p tsconfig.json",
     "build:js": "cp src/*.css .tmp && webpack --config webpack.config.js -p && webpack --config webpack.min.config.js -p",
     "build:copy-types": "cp .tmp/*.d.ts build",
-    "prepare": "run-s prepare:*",
-    "prepare:generate-barrels": "barrelsby --directory src --singleQuotes --delete",
-    "prepare:generate-changelog": "auto-changelog -p --ignore-commit-pattern \"update changelog, fix linting, regenerate barrels\"",
-    "prepare:synk": "snyk protect",
-    "prepare:prettier": "prettier \"src/**/*.ts\" --write --print-width=120",
-    "prepare:tslint": "tslint --fix --project .",
-    "prepare:commit-changes": "git add --all && git commit -m \"chore(release): update changelog, fix linting, regenerate barrels\"",
+    "prepare-package": "run-s prepare-package:*",
+    "prepare-package:generate-barrels": "barrelsby --directory src --singleQuotes --delete",
+    "prepare-package:generate-changelog": "auto-changelog -p --ignore-commit-pattern \"update changelog, fix linting, regenerate barrels\"",
+    "prepare-package:synk": "snyk protect",
+    "prepare-package:prettier": "prettier \"src/**/*.ts\" --write --print-width=120",
+    "prepare-package:tslint": "tslint --fix --project .",
+    "prepare-package:commit-changes": "git add --all && git commit -m \"chore(release): update changelog, fix linting, regenerate barrels\"",
     "check": "tslint --project . && npm run test -- --no-cache --coverage",
     "test": "jest",
     "test:coverage": "jest --coverage && codecov",
@@ -44,7 +44,7 @@
     "release-patch": "npm run check && npm version patch && npm run release:prepare-release && npm run release:release-to-github && npm run release:release-to-npm",
     "release-minor": "npm run check && npm version minor && npm run release:prepare-release && npm run release:release-to-github && npm run release:release-to-npm",
     "release-major": "npm run check && npm version major && npm run release:prepare-release && npm run release:release-to-github && npm run release:release-to-npm",
-    "release:prepare-release": "run-s clean build prepare doc:generate",
+    "release:prepare-release": "run-s clean build prepare-package doc:generate",
     "release:release-to-github": "git push && git push --tags",
     "release:release-to-npm": "npm publish",
     "watch": "run-s clean build:main && run-p \"build:main -- -w\" \"test:unit -- --watch\"",
