--- a/package.json
+++ b/package.json
@@ -91,8 +91,8 @@
     "auto-changelog": "^1.11.0",
     "awesome-typescript-loader": "5.2.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^8.2.3",
-    "babel-jest": "^23.4.2",
+    "babel-eslint": "10.0.2",
+    "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.0-beta.0",
     "barrelsby": "^1.0.2",
     "codecov": "^3.5.0",
@@ -103,8 +103,8 @@
     "gh-pages": "^2.0.1",
     "husky": "^1.3.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^23.6.0",
-    "jest-config": "^23.6.0",
+    "jest": "24.8.0",
+    "jest-config": "24.8.0",
     "jest-transform-stub": "^1.0.0",
     "mini-css-extract-plugin": "^0.8.0",
     "npm-run-all": "^4.1.5",
@@ -129,9 +129,9 @@
     "typescript": "^3.5.2",
     "typings-for-css-modules-loader": "^1.7.0",
     "uglifyjs-webpack-plugin": "^2.1.3",
-    "webpack": "4.12.0",
+    "webpack": "4.39.1",
     "webpack-cli": "^3.3.7",
-    "webpack-dev-server": "^3.1.11"
+    "webpack-dev-server": "3.2.1"
   },
   "jest": {
     "setupFiles": [
